force-app/main/default/objects/Platform_Event_Log__c/Platform_Event_Log__c.object-meta.xml
<CustomObject>
    <description>Object to store summary of Platform Events trigger that updates sObjects</description>
    <label>Platform Event Log</label>
    <nameField>
        <label>Platform Event Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Platform Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>