force-app/main/default/objects/Platform_Event_Log__c/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <description>Field to store Platform Event Name</description>
    <label>Event Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>