force-app/main/default/objects/Platform_Event_Log__c/fields/Process_Date__c.field-meta.xml
<CustomField>
    <fullName>Process_Date__c</fullName>
    <description>The date on which the events have been processed</description>
    <label>Process Date</label>
    <type>Date</type>
</CustomField>