force-app/main/default/objects/Platform_Event_Log__c/fields/Total_No_of_Events_Inserted__c.field-meta.xml
<CustomField>
    <fullName>Total_No_of_Events_Inserted__c</fullName>
    <description>Total No of Events Inserted</description>
    <label>Total No of Events Inserted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>